samples/_failures_safe/1761083626_c89d1e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0df6453a.c: In function ‘main’:
./samples/SAFE/__tmp_0df6453a.c:163:5: error: expected expression at end of input
  163 |     size_t test_size = sizeof
      |     ^~~~~~
./samples/SAFE/__tmp_0df6453a.c:163:5: error: expected declaration or statement at end of input
